--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                     </div>
                 </div>
                 <div class="row" style="margin-top:-64px">
-                    <div class="col"><img class="img-fluid mt-6 mt-lg-0" width="1920" height="640" src="https://estudiohybris.github.io/american-trading-food/assets/images/above-the-fold.png" srcset="https://estudiohybris.github.io/american-trading-food/assets/images/above-the-fold.png, https://estudiohybris.github.io/american-trading-food/assets/images/above-the-fold@2x.png 2x" alt="Imagen representativa de un campo con vacas"></div>
+                    <div class="col"><img class="img-fluid w-100 mt-6 mt-lg-0" width="1920" height="640" src="https://estudiohybris.github.io/american-trading-food/assets/images/above-the-fold.png" srcset="https://estudiohybris.github.io/american-trading-food/assets/images/above-the-fold.png, https://estudiohybris.github.io/american-trading-food/assets/images/above-the-fold@2x.png 2x" alt="Imagen representativa de un campo con vacas"></div>
                 </div>
             </section>
             <section class="container-fluid">
@@ -164,10 +164,10 @@
                             <h3 data-i18n="aboutUsSection.subtitle"></h3>
                             <p class="small mb-0 border-start border-primary ps-5 pb-5" data-i18n="aboutUsSection.description"></p>
                         </div>
-                        <div class="col-lg-8" data-aos="slide-left"><img class="img-fluid mt-5 mt-lg-0" width="784" height="503" src="https://estudiohybris.github.io/american-trading-food/assets/images/nosotros-1.png" srcset="https://estudiohybris.github.io/american-trading-food/assets/images/nosotros-1.png, https://estudiohybris.github.io/american-trading-food/assets/images/nosotros-1@2x.png 2x" alt="Imagen representativa de Leche en polvo"></div>
+                        <div class="col-lg-8" data-aos="slide-left"><img class="img-fluid w-100 mt-5 mt-lg-0" width="784" height="503" src="https://estudiohybris.github.io/american-trading-food/assets/images/nosotros-1.png" srcset="https://estudiohybris.github.io/american-trading-food/assets/images/nosotros-1.png, https://estudiohybris.github.io/american-trading-food/assets/images/nosotros-1@2x.png 2x" alt="Imagen representativa de Leche en polvo"></div>
                     </div>
                     <div class="row" data-aos="slide-up">
-                        <div class="col"><img class="img-fluid mt-5" width="1296" height="512" src="https://estudiohybris.github.io/american-trading-food/assets/images/nosotros-2.png" srcset="https://estudiohybris.github.io/american-trading-food/assets/images/nosotros-2.png, https://estudiohybris.github.io/american-trading-food/assets/images/nosotros-2@2x.png 2x" alt="Imagen representativa de productos"></div>
+                        <div class="col"><img class="img-fluid w-100 mt-5" width="1296" height="512" src="https://estudiohybris.github.io/american-trading-food/assets/images/nosotros-2.png" srcset="https://estudiohybris.github.io/american-trading-food/assets/images/nosotros-2.png, https://estudiohybris.github.io/american-trading-food/assets/images/nosotros-2@2x.png 2x" alt="Imagen representativa de productos"></div>
                     </div>
                 </div>
             </section>
@@ -215,8 +215,8 @@
                             <h3 class="mb-5" data-i18n="productsSection.subtitle1"></h3>
                         </div>
                     </div>
-                    <div class="row justify-content-center" style="--bs-gutter-y:2rem" data-aos="slide-up">
-                        <div class="col-md-6 col-lg-3 col-xl-2 order-1">
+                    <div class="row" style="--bs-gutter-y:2rem" data-aos="slide-up">
+                        <div class="col-md-6 col-lg-4 offset-lg-2 order-1">
                             <div class="card h-100 bg-primary">
                                 <div class="card-body">
                                     <h4 class="text-white" data-i18n="productsSection.productCategories.category1.title"></h4>
@@ -224,7 +224,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-6 col-lg-3 col-xl-2 order-2">
+                        <div class="col-md-6 col-lg-4 order-2">
                             <div class="card h-100 bg-secondary">
                                 <div class="card-body">
                                     <h4 class="text-white" data-i18n="productsSection.productCategories.category2.title"></h4>
@@ -232,7 +232,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-6 col-lg-3 col-xl-2 order-3 order-lg-4">
+                        <div class="col-md-6 col-lg-4 offset-lg-2 order-4 order-md-3">
                             <div class="card h-100 bg-secondary">
                                 <div class="card-body">
                                     <h4 class="text-white" data-i18n="productsSection.productCategories.category3.title"></h4>
@@ -240,7 +240,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-6 col-lg-3 col-xl-2 order-4 order-lg-3">
+                        <div class="col-md-6 col-lg-4 order-3 order-md-4">
                             <div class="card h-100 bg-primary">
                                 <div class="card-body">
                                     <h4 class="text-white" data-i18n="productsSection.productCategories.category4.title"></h4>
@@ -285,22 +285,24 @@
                             <p class="text-primary text-uppercase" data-i18n="certificationsSection.title"></p>
                             <h3 data-i18n="certificationsSection.subtitle"></h3>
                             <p class="mb-5" data-i18n="certificationsSection.description"></p>
-                            <ul class="nav nav-fill">
-                                <li class="nav-item d-flex align-items-center mb-4"><img class="img-fluid me-4" width="48" height="48" src="https://estudiohybris.github.io/american-trading-food/assets/images/icon-BRC.png" srcset="https://estudiohybris.github.io/american-trading-food/assets/images/icon-BRC.png, https://estudiohybris.github.io/american-trading-food/assets/images/icon-BRC@2x.png 2x" alt="Imagen representativa de BRC Food Safety">
-                                    <p class="text-uppercase mb-0">BRC Food Safety</p>
-                                </li>
-                                <li class="nav-item d-flex align-items-center mb-4"><img class="img-fluid me-4" width="48" height="48" src="https://estudiohybris.github.io/american-trading-food/assets/images/icon-HACCP.png" srcset="https://estudiohybris.github.io/american-trading-food/assets/images/icon-HACCP.png, https://estudiohybris.github.io/american-trading-food/assets/images/icon-HACCP@2x.png 2x" alt="Imagen representativa de HACCP">
-                                    <p class="text-uppercase mb-0">HACCP</p>
-                                </li>
-                                <li class="nav-item d-flex align-items-center mb-4"><img class="img-fluid me-4" width="48" height="48" src="https://estudiohybris.github.io/american-trading-food/assets/images/icon-ISO.png" srcset="https://estudiohybris.github.io/american-trading-food/assets/images/icon-ISO.png, https://estudiohybris.github.io/american-trading-food/assets/images/icon-ISO@2x.png 2x" alt="Imagen representativa de ISO 9001">
-                                    <p class="text-uppercase mb-0">ISO 9001</p>
-                                </li>
-                                <li class="nav-item d-flex align-items-center mb-4"><img class="img-fluid me-4" width="92" height="48" src="https://estudiohybris.github.io/american-trading-food/assets/images/icon-HALAL.png" srcset="https://estudiohybris.github.io/american-trading-food/assets/images/icon-HALAL.png, https://estudiohybris.github.io/american-trading-food/assets/images/icon-HALAL@2x.png 2x" alt="Imagen representativa de HALAL / Kosher">
-                                    <p class="text-uppercase mb-0">HALAL / Kosher</p>
-                                </li>
-                            </ul>
+                            <div class="contianer-fluid mb-5 mb-lg-0">
+                                <div class="row" style="--bs-gutter-y:2rem">
+                                    <div class="col-lg-6 d-flex align-items-center"><img class="img-fluid me-4" width="48" height="48" src="https://estudiohybris.github.io/american-trading-food/assets/images/icon-BRC.png" srcset="https://estudiohybris.github.io/american-trading-food/assets/images/icon-BRC.png, https://estudiohybris.github.io/american-trading-food/assets/images/icon-BRC@2x.png 2x" alt="Imagen representativa de BRC Food Safety">
+                                        <p class="text-uppercase mb-0">BRC Food Safety</p>
+                                    </div>
+                                    <div class="col-lg-6 d-flex align-items-center"><img class="img-fluid me-4" width="48" height="48" src="https://estudiohybris.github.io/american-trading-food/assets/images/icon-HACCP.png" srcset="https://estudiohybris.github.io/american-trading-food/assets/images/icon-HACCP.png, https://estudiohybris.github.io/american-trading-food/assets/images/icon-HACCP@2x.png 2x" alt="Imagen representativa de HACCP">
+                                        <p class="text-uppercase mb-0">HACCP</p>
+                                    </div>
+                                    <div class="col-lg-6 d-flex align-items-center"><img class="img-fluid me-4" width="48" height="48" src="https://estudiohybris.github.io/american-trading-food/assets/images/icon-ISO.png" srcset="https://estudiohybris.github.io/american-trading-food/assets/images/icon-ISO.png, https://estudiohybris.github.io/american-trading-food/assets/images/icon-ISO@2x.png 2x" alt="Imagen representativa de ISO 9001">
+                                        <p class="text-uppercase mb-0">ISO 9001</p>
+                                    </div>
+                                    <div class="col-lg-6 d-flex align-items-center"><img class="img-fluid me-4" width="92" height="48" src="https://estudiohybris.github.io/american-trading-food/assets/images/icon-HALAL.png" srcset="https://estudiohybris.github.io/american-trading-food/assets/images/icon-HALAL.png, https://estudiohybris.github.io/american-trading-food/assets/images/icon-HALAL@2x.png 2x" alt="Imagen representativa de HALAL / Kosher">
+                                        <p class="text-uppercase mb-0">HALAL / Kosher</p>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
-                        <div class="col-lg-4" data-aos="slide-left"><img class="img-fluid mt-2 mt-lg-0" width="466" height="512" src="https://estudiohybris.github.io/american-trading-food/assets/images/certificaciones.png" srcset="https://estudiohybris.github.io/american-trading-food/assets/images/certificaciones.png, https://estudiohybris.github.io/american-trading-food/assets/images/certificaciones@2x.png 2x" alt="Imagen representativa de Certificaciones"></div>
+                        <div class="col-lg-4" data-aos="slide-left"><img class="img-fluid w-100" width="466" height="512" src="https://estudiohybris.github.io/american-trading-food/assets/images/certificaciones.png" srcset="https://estudiohybris.github.io/american-trading-food/assets/images/certificaciones.png, https://estudiohybris.github.io/american-trading-food/assets/images/certificaciones@2x.png 2x" alt="Imagen representativa de Certificaciones"></div>
                     </div>
                 </div>
             </section>
@@ -316,7 +318,7 @@
                     </div>
                 </div>
             </section>
-            <section class="py-11" id="contactanos-fluid">
+            <section class="container-fluid py-11" id="contactanos">
                 <div class="container">
                     <div class="row justify-content-center text-center">
                         <div class="col-lg-6">
@@ -326,10 +328,11 @@
                     </div>
                     <div class="row justify-content-center">
                         <div class="col-lg-6">
-                            <form action="" method="post">
-                                <div class="mb-3"><label class="form-label" for="inputName" data-i18n="contactsSection.form.input1"></label> <input class="form-control" type="text" id="inputName"></div>
-                                <div class="mb-3"><label class="form-label" for="inputEmail" data-i18n="contactsSection.form.input2"></label> <input class="form-control" type="email" id="inputEmail"></div>
-                                <div class="mb-3"><label class="form-label" for="textareaMessage" data-i18n="contactsSection.form.input3"></label> <textarea class="form-control" id="textareaMessage" rows="3"></textarea></div>
+                            <form id="formContact" action="assets/process/contact.php" method="post"><input type="hidden" name="mode" value="contacto">
+                                <div class="mb-5"><label class="form-label" for="inputName" data-i18n="contactsSection.form.input1"></label> <input class="form-control" type="text" name="nombre_completo" id="inputName" placeholder="Tu nombre completo" required></div>
+                                <div class="mb-5"><label class="form-label" for="inputEmail" data-i18n="contactsSection.form.input2"></label> <input class="form-control" type="email" name="email" id="inputEmail" placeholder="tuemail@ejemplo.com" required></div>
+                                <div class="mb-5"><label class="form-label" for="textareaMessage" data-i18n="contactsSection.form.input3"></label> <textarea class="form-control" name="mensaje" id="textareaMessage" rows="5" placeholder="Escribe tu mensaje aquí" required></textarea></div>
+                                <p class="mb-5" id="formContactResponse"></p>
                                 <div class="text-center"><button class="btn btn-primary" type="submit" data-i18n="contactsSection.form.button"><svg class="mt-1 ms-2" width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" style="transform:scale(1.5)">
                                             <path fill-rule="evenodd" clip-rule="evenodd" d="M8.23429 2.63422C8.54671 2.3218 9.05324 2.3218 9.36566 2.63422L14.1657 7.43422C14.4781 7.74664 14.4781 8.25317 14.1657 8.56559L9.36566 13.3656C9.05324 13.678 8.54671 13.678 8.23429 13.3656C7.92187 13.0532 7.92187 12.5466 8.23429 12.2342L11.6686 8.7999L2.39998 8.7999C1.95815 8.7999 1.59998 8.44173 1.59998 7.9999C1.59998 7.55807 1.95815 7.1999 2.39998 7.1999H11.6686L8.23429 3.76559C7.92187 3.45317 7.92187 2.94664 8.23429 2.63422Z" fill="#FEFEFE"></path>
                                         </svg></button></div>
