--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
                     </div>
                     <div class="row justify-content-center">
                         <div class="col-lg-6">
-                            <form id="formContact" action="assets/process/contact.php" method="post"><input type="hidden" name="mode" value="contacto">
+                            <form id="formContact" action="#" method="post"><input type="hidden" name="mode" value="contacto">
                                 <div class="mb-5"><label class="form-label" for="inputName" data-i18n="contactsSection.form.input1"></label> <input class="form-control" type="text" name="nombre_completo" id="inputName" placeholder="Tu nombre completo" required></div>
                                 <div class="mb-5"><label class="form-label" for="inputEmail" data-i18n="contactsSection.form.input2"></label> <input class="form-control" type="email" name="email" id="inputEmail" placeholder="tuemail@ejemplo.com" required></div>
                                 <div class="mb-5"><label class="form-label" for="textareaMessage" data-i18n="contactsSection.form.input3"></label> <textarea class="form-control" name="mensaje" id="textareaMessage" rows="5" placeholder="Escribe tu mensaje aquí" required></textarea></div>
